[gd_scene load_steps=10 format=3 uid="uid://bubbkfm24udy8"]

[ext_resource type="Script" uid="uid://cwt3ofoq2twjo" path="res://MainGame.gd" id="1_d28a0"]
[ext_resource type="Texture2D" uid="uid://8r5ickgrsea3" path="res://Godot Assets/Snake_spritesheet.png" id="2_mbwvw"]
[ext_resource type="Texture2D" uid="uid://6dijlwlte8cr" path="res://Godot Assets/grass.png" id="2_okepa"]
[ext_resource type="Texture2D" uid="uid://bpqsiua1kwx26" path="res://Godot Assets/apple.png" id="3_jjdc5"]
[ext_resource type="PackedScene" uid="uid://cy7q71hua7j8a" path="res://score.tscn" id="5_1834o"]
[ext_resource type="AudioStream" uid="uid://c2om6c2a2sn6y" path="res://Godot Assets/SnakeProject_Sound_crunch.wav" id="6_wijf3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mwwq1"]
texture = ExtResource("2_mbwvw")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0gxld"]
texture = ExtResource("3_jjdc5")
texture_region_size = Vector2i(40, 40)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_k3fai"]
tile_size = Vector2i(40, 40)
sources/0 = SubResource("TileSetAtlasSource_mwwq1")
sources/1 = SubResource("TileSetAtlasSource_0gxld")

[node name="MainGame" type="Node"]
script = ExtResource("1_d28a0")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 80.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_okepa")
stretch_mode = 1

[node name="SnakeTick" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Score" parent="." instance=ExtResource("5_1834o")]

[node name="CrunchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_wijf3")

[node name="SnakeApple" type="TileMap" parent="."]
tile_set = SubResource("TileSet_k3fai")
rendering_quadrant_size = 40
format = 2

[node name="Layer1" type="TileMapLayer" parent="SnakeApple"]
use_parent_material = true
tile_set = SubResource("TileSet_k3fai")
rendering_quadrant_size = 40

[connection signal="timeout" from="SnakeTick" to="." method="_on_snake_tick_timeout"]
